--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
@@ -94,7 +94,9 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label">Description</label>
-                                    <input name="Descriptions" value="@options.Description" class="form-control" />
+                                    <textarea name="Descriptions" id="discriptions" class="form-control"> 
+                                        @options.Description
+                                    </textarea>
                                 </div>
 
                                 <h1>Value & Cost </h1>
@@ -143,6 +145,9 @@
     }
     <script>
 
+        tinymce.init({
+            selector: '#discriptions'
+        });
         tinymce.init({
             selector: '#exampleFormControlTextarea1'
         });
