--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -30,10 +30,11 @@
                 <div id="schlussel">
                     <h3>Schlüssel</h3>
                 </div>
-
                     <div id ="schlussel2">
                         <input id="removeButton" type="button" value="-">
                         <input id="addButton" type="button" value="+">
+                        <select id="countKeySelect" onchange="selectKey(event.target.value)">
+                        </select>
                 </div>
             </div>
             <div id="itemKeyBlock">
@@ -132,7 +133,7 @@
             </div>
                 <div id="add_And_Minus">
 
-                    <select id="countTurSelect">
+                    <select id="countTurSelect" onchange="selectTur(event.target.value)">
                        
                     </select>
 
@@ -273,6 +274,16 @@
             option.value = i;
 
             countTurSelect.append(option);
+        }
+
+        for (let i = 1; i < 200; i++) 
+        {
+            let option = document.createElement("option");
+
+            option.innerText = i;
+            option.value = i;
+
+            countKeySelect.append(option);
         }
 
     });
@@ -723,87 +734,88 @@
                 }
     }
 
-        function addBlockTur() {
-        blockTur++;
+        function addBlockTur() 
+        {
+            blockTur++;
 
-        let newBlock = document.createElement('div');
-        newBlock.id = 'BlockTur-' + blockTur;
-        newBlock.innerHTML = `  <div class="TexCountTur">
-                                <div id="ItemTur">
-                                    <div id="position">
-                                       <h6 id="counterTur">${blockTur}</h6>
-                                    </div>
-
-                                    <div>
-                                              <input id="inputTur" required  onchange="chekedNameArientiren(event.target.value,${blockTur})" name="Turname" placeholder="Name der Tür" />
-                                    </div>
+            let newBlock = document.createElement('div');
+            newBlock.id = 'BlockTur-' + blockTur;
+            newBlock.innerHTML = `  <div class="TexCountTur">
+                                    <div id="ItemTur">
+                                        <div id="position">
+                                           <h6 id="counterTur">${blockTur}</h6>
+                                        </div>
 
                                         <div>
+                                                  <input id="inputTur" required  onchange="chekedNameArientiren(event.target.value,${blockTur})" name="Turname" placeholder="Name der Tür" />
+                                        </div>
 
-                                             <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="25" width="40"  />
+                                            <div>
 
+                                                 <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="25" width="40"  />
+
+                                            </div>
+                                    </div>
+                                     
+                                    <div id="SelectTurItem">
+                                            <select id="TypeSelectTurType"  onchange="selectParam(event.target.value,${blockTur})" name="ZylinderId">
+                                        @foreach (var list in ViewBag.Zylinder_Typ)
+                                        {
+                                          <option>@list.nameType</option>
+                                        }
+                                        </select>
+                                    </div>
+                                     
+                                    <div id="SelectTurItem">
+                                            <select id="TypeSelectTurItem"  class="aussen" name="aussen">
+                                            @foreach (var list in ViewBag.DoppelAussen)
+                                            {
+                                              <option id="OptionA">@list</option>
+                                            }
+                                        </select>
+                                    </div>
+                                    <div id="SelectTurItem">
+                                                <select id="TypeSelectTurItem" class="Innen" name="innen">
+                                             @foreach (var list in ViewBag.DoppelIntern)
+                                             {
+                                                   <option id="OptionI">@list</option>
+                                             }
+                                        </select>
+                                    </div>
+                                               <div id="chekerTur">
+                                                <button type="button" onclick="Minus(${blockTur})">-</button>
+                                            <input id="infoButten"  value="1" type="text" name="CountTur" />
+                                               <button type="button" onclick="Plus(${blockTur})">+</button>
                                         </div>
                                 </div>
-                                     
-                                <div id="SelectTurItem">
-                                        <select id="TypeSelectTurType"  onchange="selectParam(event.target.value,${blockTur})" name="ZylinderId">
-                                    @foreach (var list in ViewBag.Zylinder_Typ)
-                                    {
-                                      <option>@list.nameType</option>
-                                    }
-                                    </select>
-                                </div>
-                                     
-                                <div id="SelectTurItem">
-                                        <select id="TypeSelectTurItem"  class="aussen" name="aussen">
-                                        @foreach (var list in ViewBag.DoppelAussen)
-                                        {
-                                          <option id="OptionA">@list</option>
-                                        }
-                                    </select>
-                                </div>
-                                <div id="SelectTurItem">
-                                            <select id="TypeSelectTurItem" class="Innen" name="innen">
-                                         @foreach (var list in ViewBag.DoppelIntern)
-                                         {
-                                               <option id="OptionI">@list</option>
-                                         }
-                                    </select>
-                                </div>
-                                           <div id="chekerTur">
-                                            <button type="button" onclick="Minus(${blockTur})">-</button>
-                                        <input id="infoButten"  value="1" type="text" name="CountTur" />
-                                           <button type="button" onclick="Plus(${blockTur})">+</button>
-                                    </div>
-                            </div>
                               
-                `;
+                    `;
 
-            document.getElementById('BlockTur-1').appendChild(newBlock);
+                document.getElementById('BlockTur-1').appendChild(newBlock);
 
-            let horizont = document.createElement('div');
-            horizont.id = `${blockTur}horizontal`;
-            horizont.classList.add('horizontal');
+                let horizont = document.createElement('div');
+                horizont.id = `${blockTur}horizontal`;
+                horizont.classList.add('horizontal');
 
-            for (let i = 1; i <= blockCount; i++) 
-            {
+                for (let i = 1; i <= blockCount; i++) 
+                {
 
-                let newBlockTur = document.createElement('div');
+                    let newBlockTur = document.createElement('div');
                
-                newBlockTur.innerHTML = ` <input type="checkbox" id=${blockTur}checkbox${i}>
-                <input type="hidden" value="false" id="I${blockTur}checkbox${i}">`;
+                    newBlockTur.innerHTML = ` <input type="checkbox" id=${blockTur}checkbox${i}>
+                    <input type="hidden" value="false" id="I${blockTur}checkbox${i}">`;
 
-                newBlockTur.id = `${blockTur}.checkboxContainer${i}`;
+                    newBlockTur.id = `${blockTur}.checkboxContainer${i}`;
 
-                newBlockTur.classList.add('checkboxContainer');
+                    newBlockTur.classList.add('checkboxContainer');
 
-                horizont.appendChild(newBlockTur);
+                    horizont.appendChild(newBlockTur);
 
-                document.getElementById('InfoValue').appendChild(horizont);
+                    document.getElementById('InfoValue').appendChild(horizont);
 
-                createCustomCheckbox(`${blockTur}checkbox${i}`);
-            }
-    }
+                    createCustomCheckbox(`${blockTur}checkbox${i}`);
+                }
+        }
         function removeBlock() 
         {
             let blockToRemove = document.getElementById('TexCount-' + blockCount);
@@ -877,11 +889,165 @@
         }
 
     }
+    function selectKey(value) 
+    {
+        localStorage.clear();
+      
+        
+        document.getElementById('itemKeyBlock').innerHTML = "";
+        // blockTur = 0;
+        blockCount = 0;
 
-        document.getElementById('removeButton').addEventListener('click', removeBlock);
-        document.getElementById('addButton').addEventListener('click', addBlock);
+        let hor = document.querySelectorAll(".horizontal");
+        
+        hor.forEach((item) => {
+            item.innerHTML = "";
+        });
+
+
+        for (let i = 1; i <= value ;i++) 
+        {
+            blockCount++;
+          
+
+            let newBlock = document.createElement('div');
+            newBlock.id = 'TexCount-' + blockCount;
+            newBlock.innerHTML = `
+                                   <div  class="TexCount">
+                                         <input type="text" required  name="FurNameKey" style="position: relative;" value="${blockCount}" />
+                                <div id="TexInputKey">
+                                        <input id="inputS" required name="NameKey" onchange="chekedNameArienKey(event.target.value,${blockCount})" placeholder="Name des Schlüssels" type="text" />
+                                </div>
+                                <div>
+                                             <input id="inputCount" required name="CountKey" value="1" type="text" />
+                                </div>
+                            </div>
+
+            `;
+
+            document.getElementById('itemKeyBlock').appendChild(newBlock);
+
+            let horizont = document.getElementById(`${blockTur}horizontal`);
+
+            for (let i = 1; i <= blockTur; i++) 
+            {
+               
+
+                let newBlockTur = document.createElement('div');
+
+                newBlockTur.innerHTML = ` <input type="checkbox" id=${i}checkbox${blockCount}>
+                                        <input type="hidden"  value="false" id="I${i}checkbox${blockCount}">`;
+
+                newBlockTur.id = `${i}.checkboxContainer${blockCount}`;
+
+                newBlockTur.classList.add('checkboxContainer');
+
+                document.getElementById(`${i}horizontal`).appendChild(newBlockTur);
+
+                document.getElementById('InfoValue').appendChild(horizont);
+
+                createCustomCheckbox(`${i}checkbox${blockCount}`);
+            }
+        }
+        console.log(blockTur);
+        console.log(blockCount);
+    }
+
+    function selectTur(value) 
+    {
+        localStorage.clear();
+        blockTur = 0;
+        document.getElementById('InfoValue').innerHTML = '';
+        document.getElementById('BlockTur-1').innerHTML = '';
+
+        for (let i = 1; i <= value; i++) 
+        {
+            blockTur++;
+
+            let newBlock = document.createElement('div');
+            newBlock.id = 'BlockTur-' + blockTur;
+            newBlock.innerHTML = `  <div class="TexCountTur">
+                                        <div id="ItemTur">
+                                            <div id="position">
+                                               <h6 id="counterTur">${blockTur}</h6>
+                                            </div>
+
+                                            <div>
+                                                      <input id="inputTur" required  onchange="chekedNameArientiren(event.target.value,${blockTur})" name="Turname" placeholder="Name der Tür" />
+                                            </div>
+
+                                                <div>
+
+                                                     <img  id="typeSylinder" src="/Image/doppelzylinder.png" height="25" width="40"  />
+
+                                                </div>
+                                        </div>
+
+                                        <div id="SelectTurItem">
+                                                <select id="TypeSelectTurType"  onchange="selectParam(event.target.value,${blockTur})" name="ZylinderId">
+                                                @foreach (var list in ViewBag.Zylinder_Typ)
+                                                {
+                                                    <option>@list.nameType</option>
+                                                }
+                                            </select>
+                                        </div>
+
+                                        <div id="SelectTurItem">
+                                                <select id="TypeSelectTurItem"  class="aussen" name="aussen">
+                                                @foreach (var list in ViewBag.DoppelAussen)
+                                                {
+                                                     <option id="OptionA">@list</option>
+                                                }
+                                            </select>
+                                        </div>
+                                        <div id="SelectTurItem">
+                                                    <select id="TypeSelectTurItem" class="Innen" name="innen">
+                                                    @foreach (var list in ViewBag.DoppelIntern)
+                                                    {
+                                                       <option id="OptionI">@list</option>
+                                                    }
+                                            </select>
+                                        </div>
+                                                   <div id="chekerTur">
+                                                    <button type="button" onclick="Minus(${blockTur})">-</button>
+                                                <input id="infoButten"  value="1" type="text" name="CountTur" />
+                                                   <button type="button" onclick="Plus(${blockTur})">+</button>
+                                            </div>
+                                    </div>
+
+                        `;
+
+            document.getElementById('BlockTur-1').appendChild(newBlock);
+           
+            let horizont = document.createElement('div');
+            horizont.id = `${blockTur}horizontal`;
+            horizont.classList.add('horizontal');
+
+            for (let i = 1; i <= blockCount; i++) 
+            {
+
+                let newBlockTur = document.createElement('div');
+
+                newBlockTur.innerHTML = ` <input type="checkbox" id=${blockTur}checkbox${i}>
+                <input type="hidden" value="false" id="I${blockTur}checkbox${i}">`;
+
+                newBlockTur.id = `${blockTur}.checkboxContainer${i}`;
+
+                newBlockTur.classList.add('checkboxContainer');
+
+                horizont.appendChild(newBlockTur);
+
+                document.getElementById('InfoValue').appendChild(horizont);
+
+                createCustomCheckbox(`${blockTur}checkbox${i}`);
+            }
+        }
+    }
+
+    document.getElementById('removeButton').addEventListener('click', removeBlock);
+    document.getElementById('addButton').addEventListener('click', addBlock);
 
     document.getElementById('removeButtonTur').addEventListener('click', removeBlockTur);
     document.getElementById('addButtonTur').addEventListener('click', addBlockTur);
-    
+
 </script>
