--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
@@ -77,7 +77,9 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label">Description</label>
-                                    <input name="Descriptions" value="@options.Description" class="form-control" />
+                                    <textarea name="Descriptions" id="discriptions" class="form-control"> 
+                                        @options.Description
+                                        </textarea>
                                 </div>
 
                                 <h1>Value & Cost </h1>
@@ -127,7 +129,9 @@
             tinymce.init({
                 selector: '#exampleFormControlTextarea1'
             });
-
+            tinymce.init({
+                selector: '#discriptions'
+            });
 
             let costNGF = document.getElementById('costNGF');
             let valueNGF = document.getElementById('valueNGF');
