--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
@@ -86,7 +86,9 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label">Description</label>
-                                    <input name="Descriptions" value="@options.Description" class="form-control" />
+                                    <textarea name="Descriptions" id="discriptions" class="form-control"> 
+                                        @options.Description
+                                     </textarea>
                                 </div>
 
                                 <h1>Value & Cost </h1>
@@ -104,7 +106,7 @@
                                         @for (int i = 0; i < ViewBag.CountOptions[r]; i++)
                                         {
                                             f++;
-                                            <input type="text" placeholder="costNGF" @* step="0,01" *@ name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
+                                            <input type="text" placeholder="costNGF"  name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
                                         }
                                     </div>
                                     <input type="hidden" id="counter" name="inputCounter" />
@@ -136,13 +138,14 @@
             tinymce.init({
                 selector: '#exampleFormControlTextarea1'
             });
+            tinymce.init({
+                selector: '#discriptions'
+            });
 
             let plusAussen_Innen = document.getElementById('addAussen_Innen');
             let removeAussen_Innen = document.getElementById('addAussen_Innen_remove');
 
             let docAussen = document.getElementById('AussenProfilDopel');
-
-
 
             window.addEventListener('load', function () {
                 const blocks = document.querySelectorAll('.input-block');
