--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -348,9 +348,10 @@
                                 {
                                     @for (int i = 0; i < ViewBag.optionsNameKnayf.Count; i++)
                                     {
-                                            <input class="form-control" id="OptionName" style="margin-top: 5px;" readonly type="text" value="@ViewBag.optionsNameKnayf[i]" />
+                                            <input class="form-control" id="OptionName" style="margin-top: 5px;" readonly type="text" value="@ViewBag.optionsNameKnayf[i].Name" />
+                                             <img onclick="OpenDescriptionsKnayf(@i)"  id="hilfeOptionsIcon" src="@("/Image/question.png")" height="20" width="20" />
 
-                                            <select style="margin-bottom: 10px;"  class="form-select" id="@d-Options-@i" onchange="OptionsSelect(@d,'Knayf',event.target.id,event.target.value,@valueCount,'@ViewBag.optionsNameKnayf[i]',@i,@d)">
+                                            <select style="margin-bottom: 10px;" class="form-select" id="@d-Options-@i" onchange="OptionsSelect(@d,'Knayf',event.target.id,event.target.value,@valueCount,'@ViewBag.optionsNameKnayf[i].Name',@i,@d)">
 
                                             @for (int j = 0; j < ViewBag.countOptionsListKnayf[i]; j++)
                                             {
@@ -360,6 +361,24 @@
                                             }
 
                                         </select>
+
+                                            <div id="KnayfOptionsDescriptions" class="modal">
+                                                <div class="modal-content">
+                                                    <span onclick="closeOptionsKnayf(@i)" class="closeOptions">&times;</span>
+
+                                                    <div id="modalDiscriptions">
+                                                        <div>
+                                                            <h2>@ViewBag.optionsNameKnayf[i].Name</h2>
+                                                            <img src="@("/Image/"+@ViewBag.optionsNameKnayf[i].ImageName)" height="300" width="300" />
+                                                        </div>
+
+                                                        <div id="bOptions2">
+                                                            @Html.Raw(@ViewBag.optionsNameKnayf[i].Description)
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                             <input type="hidden"  id="Option-@d + @i" />
                                             <input type="hidden" id="d-@d + @i" />
                                     }
@@ -984,11 +1003,7 @@
 
     let idItem = 0;
     let Dorname = @Html.Raw(ViewBag.DornameJson);
-    function closeOptions(Id) 
-    {
-        const modal = document.querySelectorAll("#myModalOptionsDescriptions");
-        modal[Id].style.display = "none";
-    }
+   
 
     window.onclick = function (event) 
     {
@@ -1003,6 +1018,23 @@
     {
         const modal = document.querySelectorAll("#myModalOptionsDescriptions");
         modal[id].style.display = "block";
+    }
+    function closeOptions(Id) 
+    {
+        const modal = document.querySelectorAll("#myModalOptionsDescriptions");
+        modal[Id].style.display = "none";
+    }
+
+    function OpenDescriptionsKnayf(id) 
+    {
+        const modal = document.querySelectorAll("#KnayfOptionsDescriptions");
+        modal[id].style.display = "block";
+    }
+
+    function closeOptionsKnayf(Id) 
+    {
+        const modal = document.querySelectorAll("#KnayfOptionsDescriptions");
+        modal[Id].style.display = "none";
     }
 
     let DoppelDescriptions = @Html.Raw(ViewBag.DoppelzylinderDescriptions);
